correction bug d'affichage de la page 2 et amelioration des contrastes

--- a/style.css
+++ b/style.css
@@ -773,11 +773,11 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #595959;
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #FFFFFF!important;
 }
 
 .btn-atomic-tangerine {
@@ -904,8 +904,8 @@ h4 {
     h6,
     p,
     #disqus_thread {
-        padding-left: 10px!important;
-        padding-right: 10px!important;
+        padding-left: 10%!important;
+        padding-right: 10%!important;
     }
     .b-parallax {
         background-attachment: scroll;
